# Projet_Tulle

./: .gitignore  .~lock.diapo.odp#  Admin.cpp  Admin.h  CMakeLists.txt  Chauffeur.cpp  Chauffeur.h  Colis.cpp  Colis.h  Dispatcher.cpp  Dispatcher.h  Personne.cpp  Personne.h  README.md  Trajet.cpp  Trajet.h  ancien_main.cpp  common.h  config  diapo.odp  dispatcherpanel.ui.autosave  history.txt  main.cpp  sharedVariables.h  tests_main.cpp
applications/: main.cpp  mainwindow.cpp  tests_main.cpp
core/header/: Chauffeur.h  Personne.h
core/headers/: Admin.h  Chauffeur.h  Colis.h  Dispatcher.h  Errors.h  Personne.h  Trajet.h  adminPanelInfo.h  chauffeurPanelInfo.h  common.h  dispatcherPanelInfo.h  initDB.h
core/source/: Admin.cpp  Chauffeur.cpp  Colis.cpp  Dispatcher.cpp  Personne.cpp  Trajet.cpp
core/sources/: Admin.cpp  Chauffeur.cpp  Colis.cpp  Dispatcher.cpp  Errors.cpp  Personne.cpp  Trajet.cpp  adminPanelInfo.cpp  chauffeurPanelInfo.cpp  dispatcherPanelInfo.cpp  initDB.cpp
db/: database.db  database.db-journal  database.sql  databasesqlite.sql  mcd.mcd  son.db
interface/: adminpanel.cpp  adminpanel.h  adminpanel.ui  adminpanel.ui.autosave  chauffeurpanel.cpp  chauffeurpanel.h  chauffeurpanel.ui  dispatcherpanel.cpp  dispatcherpanel.h  dispatcherpanel.ui  loginscreen.cpp  loginscreen.h  loginscreen.ui
shared/: Errors.cpp  Errors.h  common.h  conf.h
